@@ -1,6 +1,5 @@
 .travis.yml
 LICENSE
-R/obs_exp.R
 ^\.travis\.yml$
 ^appveyor\.yml$
 ^tic\.R$
