@@ -21,6 +21,7 @@ export(generate.ds.uncertainty)
 export(generate.mb.sample)
 export(latlong2km)
 export(make.soapgrid)
+export(obs_exp)
 export(plot_pred_by_term)
 export(rqgam.check)
 export(trim.var)
@@ -47,6 +48,7 @@ importFrom(graphics,segments)
 importFrom(mgcv,uniquecombs)
 importFrom(mrds,DeltaMethod)
 importFrom(numDeriv,grad)
+importFrom(plyr,ddply)
 importFrom(statmod,qres.binom)
 importFrom(statmod,qres.nbinom)
 importFrom(statmod,qres.tweedie)
